# wpp_send_messages

./: .gitignore  pyproject.toml
wpp_send_messages/: app_bkp.py  clients.csv  quickstart.py
